crates/weaver-e2e/tests/snapshots/graph_slice_python_property_decorator.snap
---
source: crates/weaver-e2e/tests/test_support/mod.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe graph-slice --uri <uri> --position 1:7 --entry-detail semantic --node-detail semantic",
  "status": 0,
  "stdout": "{\n  \"cards\": [\n    {\n      \"card_version\": 1,\n      \"etag\": \"<etag>\",\n      \"metrics\": {\n        \"cyclomatic\": 1,\n        \"lines\": 7\n      },\n      \"provenance\": {\n        \"extracted_at\": \"<timestamp>\",\n        \"sources\": [\n          \"tree_sitter\",\n          \"tree_sitter_degraded_semantic\"\n        ]\n      },\n      \"structure\": {\n        \"branches\": [],\n        \"locals\": []\n      },\n      \"symbol\": {\n        \"ref\": {\n          \"kind\": \"class\",\n          \"language\": \"python\",\n          \"name\": \"User\",\n          \"range\": {\n            \"end\": {\n              \"column\": 25,\n              \"line\": 6\n            },\n            \"start\": {\n              \"column\": 0,\n              \"line\": 0\n            }\n          },\n          \"uri\": \"<uri>\"\n        },\n        \"symbol_id\": \"<symbol_id>\"\n      }\n    },\n    {\n      \"card_version\": 1,\n      \"etag\": \"<etag>\",\n      \"metrics\": {\n        \"cyclomatic\": 1,\n        \"lines\": 2\n      },\n      \"provenance\": {\n        \"extracted_at\": \"<timestamp>\",\n        \"sources\": [\n          \"tree_sitter\",\n          \"tree_sitter_degraded_semantic\"\n        ]\n      },\n      \"signature\": {\n        \"display\": \"def __init__(self, name: str) -> None:\",\n        \"params\": [\n          {\n            \"name\": \"self\",\n            \"type\": \"\"\n          },\n          {\n            \"name\": \"name\",\n            \"type\": \"str\"\n          }\n        ],\n        \"returns\": \"None\"\n      },\n      \"structure\": {\n        \"branches\": [],\n        \"locals\": [\n          {\n            \"decl_line\": 2,\n            \"kind\": \"variable\",\n            \"name\": \"self\"\n          },\n          {\n            \"decl_line\": 2,\n            \"kind\": \"variable\",\n            \"name\": \"_name\"\n          }\n        ]\n      },\n      \"symbol\": {\n        \"ref\": {\n          \"container\": \"User\",\n          \"kind\": \"method\",\n          \"language\": \"python\",\n          \"name\": \"__init__\",\n          \"range\": {\n            \"end\": {\n              \"column\": 25,\n              \"line\": 2\n            },\n            \"start\": {\n              \"column\": 4,\n              \"line\": 1\n            }\n          },\n          \"uri\": \"<uri>\"\n        },\n        \"symbol_id\": \"<symbol_id>\"\n      }\n    },\n    {\n      \"attachments\": {\n        \"bundle_rule\": \"leading_trivia\",\n        \"decorators\": [\n          \"@property\"\n        ],\n        \"doc_comments\": [],\n        \"normalized\": {\n          \"decorators\": [\n            \"property\"\n          ]\n        }\n      },\n      \"card_version\": 1,\n      \"etag\": \"<etag>\",\n      \"metrics\": {\n        \"cyclomatic\": 1,\n        \"lines\": 2\n      },\n      \"provenance\": {\n        \"extracted_at\": \"<timestamp>\",\n        \"sources\": [\n          \"tree_sitter\",\n          \"tree_sitter_degraded_semantic\"\n        ]\n      },\n      \"signature\": {\n        \"display\": \"def name(self) -> str:\",\n        \"params\": [\n          {\n            \"name\": \"self\",\n            \"type\": \"\"\n          }\n        ],\n        \"returns\": \"str\"\n      },\n      \"structure\": {\n        \"branches\": [],\n        \"locals\": []\n      },\n      \"symbol\": {\n        \"ref\": {\n          \"container\": \"User\",\n          \"kind\": \"method\",\n          \"language\": \"python\",\n          \"name\": \"name\",\n          \"range\": {\n            \"end\": {\n              \"column\": 25,\n              \"line\": 6\n            },\n            \"start\": {\n              \"column\": 4,\n              \"line\": 5\n            }\n          },\n          \"uri\": \"<uri>\"\n        },\n        \"symbol_id\": \"<symbol_id>\"\n      }\n    }\n  ],\n  \"constraints\": {\n    \"budget\": {\n      \"max_cards\": 30,\n      \"max_edges\": 200,\n      \"max_estimated_tokens\": 4000\n    },\n    \"depth\": 2,\n    \"direction\": \"both\",\n    \"edge_types\": [\n      \"call\",\n      \"import\",\n      \"config\"\n    ],\n    \"entry_detail\": \"semantic\",\n    \"min_confidence\": 0.5,\n    \"node_detail\": \"semantic\"\n  },\n  \"edges\": [],\n  \"entry\": {\n    \"symbol_id\": \"<symbol_id>\"\n  },\n  \"schema_version\": \"graph_slice.v1\",\n  \"slice_version\": 1,\n  \"spillover\": {\n    \"frontier\": [],\n    \"truncated\": false\n  },\n  \"status\": \"success\"\n}",
  "stderr": ""
}
