crates/weaver-e2e/tests/snapshots/graph_slice_refusal_no_symbol_at_position.snap
---
source: crates/weaver-e2e/tests/test_support/mod.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe graph-slice --uri <uri> --position 2:1 --entry-detail semantic --node-detail semantic",
  "status": 11,
  "stdout": "{\n  \"refusal\": {\n    \"message\": \"observe graph-slice: no symbol found at 2:1\",\n    \"reason\": \"no_symbol_at_position\"\n  },\n  \"schema_version\": \"graph_slice.v1\",\n  \"status\": \"refusal\"\n}",
  "stderr": ""
}
