crates/weaver-e2e/tests/snapshots/graph_slice_refusal_unsupported_language.snap
---
source: crates/weaver-e2e/tests/test_support/mod.rs
---
{
  "command": "weaver --daemon-socket tcp://<daemon-endpoint> --output json observe graph-slice --uri <uri> --position 1:1 --entry-detail semantic --node-detail semantic",
  "status": 10,
  "stdout": "{\n  \"refusal\": {\n    \"message\": \"observe graph-slice: unsupported language for 'notes.txt'\",\n    \"reason\": \"unsupported_language\"\n  },\n  \"schema_version\": \"graph_slice.v1\",\n  \"status\": \"refusal\"\n}",
  "stderr": ""
}
